--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -26,4 +26,7 @@
     <string name="examleEmail">email@exemple.com</string>
     <string name="name">Nom</string>
     <string name="userListButton">Ouvrir liste des utilisateurs</string>
+    <string name="country">Pays</string>
+    <string name="randomUser">Liste d\'utilisateurs aléatoire</string>
+    <string name="openRuserlist">Ouvrir la liste d\'utilisateurs aléatoire</string>
 </resources>
