--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -29,4 +29,5 @@
     <string name="country">Pays</string>
     <string name="randomUser">Liste d\'utilisateurs aléatoire</string>
     <string name="openRuserlist">Ouvrir la liste d\'utilisateurs aléatoire</string>
+    <string name="toCount">Taille de la classe</string>
 </resources>
