--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -30,4 +30,6 @@
     <string name="randomUser">Liste d\'utilisateurs aléatoire</string>
     <string name="openRuserlist">Ouvrir la liste d\'utilisateurs aléatoire</string>
     <string name="toCount">Taille de la classe</string>
+    <string name="colorList">Liste de Couleurs</string>
+    <string name="placeholder">PLACEHOLDER</string>
 </resources>
